Fix spacing in html

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,3 @@ body {
   display: block;
   width: 100%;
 }
-
-figure {
-  margin: 0;
-}
